--- a/client/src/components/userCard/userCard.css
+++ b/client/src/components/userCard/userCard.css
@@ -1,3 +1,13 @@
-.userCard {
+.usercard {
+  width:100%;
+}
+.usercarbody{
   width:25%;
+  border:1px solid black;
+  height: 250px;
+  float:left;
+}
+img {
+  width:50px;
+  height:50px;
 }
