usercard and usercardboy bug fix

--- a/client/src/pages/Recruiters/rec.css
+++ b/client/src/pages/Recruiters/rec.css
@@ -1,7 +1,7 @@
-.usercard {
+.Usercard {
   width:100%;
 }
-.usercardbody{
+.Usercardbody{
   width:23%;
   min-width:150px;
   border:1px solid black;
