--- a/client/src/components/userCard/userCard.css
+++ b/client/src/components/userCard/userCard.css
@@ -1,11 +1,14 @@
 .usercard {
   width:100%;
 }
-.usercarbody{
-  width:25%;
+.usercardbody{
+  width:23%;
+  min-width:150px;
   border:1px solid black;
-  height: 250px;
+  height: 300px;
   float:left;
+  margin: 5px 5px 5px 0;
+  text-align: center;
 }
 img {
   width:50px;
