--- a/client/src/pages/Recruiters/rec.css
+++ b/client/src/pages/Recruiters/rec.css
@@ -1,12 +1,4 @@
-.Usercard {
-  width:100%;
-}
-.Usercardbody{
-  width:23%;
-  min-width:150px;
-  border:1px solid black;
-  height: 300px;
-  float:left;
-  margin: 5px 5px 5px 0;
-  text-align: center;
+
+.textsize{
+  font-size:12px;
 }
